<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include
        android:id="@+id/title_bar"
        layout="@layout/zqq_header_bar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/title_bar"
        android:layout_marginBottom="60dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/ll_balance"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/header_divider"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="帐号："
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_gold_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="818379"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/acc_set_phone"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_set_phone"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:hint="@string/acc_edit_phone"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:singleLine="true" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/acc_set_qq"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_set_qq"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:hint="@string/acc_edit_qq"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:singleLine="true" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/acc_set_alipay"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_set_alipay"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:hint="@string/acc_edit_alipay"
                android:imeOptions="actionNext"
                android:singleLine="true" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/acc_set_nickname"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_set_nickname"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:hint="@string/acc_edit_nickname"
                android:imeOptions="actionNext"
                android:singleLine="true" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/acc_set_email"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_set_email"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:hint="@string/acc_edit_email"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/acc_notice"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:orientation="vertical" >

            <!--
                 <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom_operation_shadow" />
            -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/navigation_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <Button
                    android:id="@+id/btn_confirm"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_bottom"
                    android:onClick="onClick"
                    android:text="提交"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_bottom"
                    android:onClick="onClick"
                    android:text="取消"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>