<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include layout="@layout/zqq_header_bar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >


        <RelativeLayout
            android:id="@+id/rl_acc_set"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_top"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" 
            android:onClick="onClick">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="10dp"
                android:text="@string/more_acc_set"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/item_go_icon" /><!--

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView2"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/more_acc_set_content" />

        --></RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_gold_rank"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_mid"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" 
            android:onClick="onClick">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="10dp"
                android:text="@string/more_gold_rank"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/item_go_icon" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_soft_upd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bot"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:onClick="onClick"
             >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="10dp"
                android:text="@string/more_soft_upd"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/item_go_icon" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>