<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include layout="@layout/zqq_header_bar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/acc_user_num"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_user_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3883278"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bt_left_bg"
                    android:gravity="center"
                    android:text="@string/acc_user_balance"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_acc_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bt_right_bg"
                    android:gravity="center"
                    android:text="3883278"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/rl_change_record"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_top"
                    android:onClick="onClick"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp" >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="10dp"
                        android:text="@string/acc_change_record"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/item_go_icon" />

                    <TextView
                        android:id="@+id/tv_change_record"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/textView2"
                        android:layout_alignBottom="@+id/textView2"
                        android:layout_marginLeft="40dp"
                       	android:layout_toRightOf="@+id/textView2"
                        android:text="0ge" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_rec_peo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_mid"
                    android:onClick="onClick"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp" >

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="10dp"
                        android:text="@string/acc_rec_peo"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/item_go_icon" />

                    <TextView
                        android:id="@+id/tv_rec_peo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                       	android:layout_alignBaseline="@+id/textView4"
                        android:layout_alignBottom="@+id/textView4"
                        android:layout_marginLeft="40dp"
                       	android:layout_toRightOf="@+id/textView4"
                        android:text="@string/acc_rec_peo" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_rec_ear"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_mid"
                    android:onClick="onClick"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp" >

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="10dp"
                        android:text="@string/acc_rec_ear"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/item_go_icon" />

                    <TextView
                        android:id="@+id/tv_rec_ear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/textView4"
                        android:layout_alignBottom="@+id/textView4"
                        android:layout_marginLeft="40dp"
                       	android:layout_toRightOf="@+id/textView4"
                        android:text="@string/acc_rec_ear" />
                </RelativeLayout>
                    
                <RelativeLayout
                    android:id="@+id/rl_income_details"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_bot"
                    android:onClick="onClick"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp" >

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="10dp"
                        android:text="@string/acc_income_details"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/item_go_icon" />

                    <TextView
                        android:id="@+id/tv_income_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                         android:layout_alignBaseline="@+id/textView5"
                        android:layout_alignBottom="@+id/textView5"
                        android:layout_marginLeft="40dp"
                       	android:layout_toRightOf="@+id/textView5"
                        android:text="@string/acc_income_details" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="这里是个人账户页面"
        android:textColor="@color/black" />

</LinearLayout>